--- a/Elegant2.css
+++ b/Elegant2.css
@@ -7609,3 +7609,11 @@ strong.username-_4ZSMR.da-username:after {
 .theme-dark .gameLibrary-TTDw4Y {
     background-color: #000000;
 }
+
+.theme-dark .sidebarRegion-VFTUkN {
+    background: #000000;
+}
+
+.theme-dark .contentRegion-3nDuYy {
+    background: #000000;
+}
