--- a/Elegant2.css
+++ b/Elegant2.css
@@ -682,28 +682,28 @@ h6 {
 }
 
 .theme-dark .searchResultsWrap-2DKFzt {
-    background-color: #000000!important;
+    background-color: #000000;
 }
 
 .theme-dark .searchHeader-1l-wpR {
-    background-color: #000000!important;
+    background-color: #000000;
 }
 
 .theme-dark .channelSeparator-1X1FuH .channelName-1QajIf {
-    background-color: #000000!important;
+    background-color: #000000;
 }
 
 .theme-dark .searchResult-3pzFAB .hit-NLlWXA {
-    background-color: #000000!important;
-    box-shadow: 0 0 10px 6px #001342!important;
+    background-color: #000000;
+    box-shadow: 0 0 10px 6px #001342;
 }
 
 .theme-dark .searchResult-3pzFAB:before {
-    background-image: linear-gradient(0deg,rgba(47,49,54,0),#000000)!important;
+    background-image: linear-gradient(0deg,rgba(47,49,54,0),#000000);
 }
 
 .searchBar-2_Yu-C.searchBarLight-1NxoDG {
-    background-color: transparent!important;
+    background-color: transparent;
 }
 .guilds-1q_RqH li.active .guildInner-3DSoA4:before,
 .guilds-1q_RqH li.unread .guildInner-3DSoA4:before {
@@ -7507,7 +7507,7 @@ strong.username-_4ZSMR.da-username:after {
 
 .theme-dark .divider-3gKybi span,
 .theme-dark .divider-3gKybi:before {
-    background-color: transparent!important;
+    background-color: transparent;
 }
 
 .divider-3gKybi:before {
