--- a/Elegant2.css
+++ b/Elegant2.css
@@ -25,6 +25,10 @@
     border-color: rgba(0, 255, 255, .4)!important
 }
 
+.container-3gCOGc {
+    background-color: #000000;
+}
+
 .app,
 .callout-backdrop,
 canvas {
